[Enhancement][Customer] adjust router customer
